<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort_by">Sort by</string>
    <string name="action_viewas">View as</string>
    <string name="app_name">File Manager</string>
    <string name="ascending">Ascending</string>
    <string name="background">Background</string>
    <string name="cancel">Cancel</string>
    <string name="clearing_cache">clearing cache</string>
    <string name="close">Close</string>
    <string name="connect">Connect</string>
    <string name="contacts_permission">Please enable contacts permission to choose a google account.</string>
    <string name="copied">Selection copied</string>
    <string name="copying">Copying..</string>
    <string name="copying_count">Copying %d of %d</string>
    <string name="copying_items">copying item(s)</string>
    <string name="create_folder">Create Folder</string>
    <string name="create_zip">Create zip file</string>
    <string name="createdTime">Created</string>
    <string name="creating_folder">creating folder</string>
    <string name="cut">Selection cut</string>
    <string name="deleting_count">Deleting %d of %d</string>
    <string name="deleting_items">deleting item(s)</string>
    <string name="descending">Descending</string>
    <string name="detailed_list">Detailed list</string>
    <string name="dialog_creating_folder">Creating folder…</string>
    <string name="dialog_delete_confirm">Are you sure you want to delete %d items?</string>
    <string name="dialog_deleting">Deleting..</string>
    <string name="dialog_error">Error</string>
    <string name="dialog_message">Local storage permission is needed to browse files on your device.</string>
    <string name="dialog_renaming">Renaming…</string>
    <string name="dialog_title_logout">Connected Sources</string>
    <string name="dialog_title_results">Search Results</string>
    <string name="dialog_title_usage">Storage Usage</string>
    <string name="err_generic">Error</string>
    <string name="err_no_app_available">No installed apps can open this file.</string>
    <string name="err_no_connection">No connection available, check your internet and try again.</string>
    <string name="err_no_ext_write">Cannot copy to external storage due to limitations of Android System.</string>
    <string name="err_no_free_space">Not enough free space.</string>
    <string name="err_no_selection">No files or folders selected.</string>
    <string name="err_not_loaded">Not loaded yet.</string>
    <string name="err_not_logged_in">Not logged in yet.</string>
    <string name="err_too_many_selected">Only one file or folder can be renamed at a time.</string>
    <string name="file_exists">A file with that name already exists here.</string>
    <string name="file_ready">File Ready</string>
    <string name="folder_exists">A folder with that name already exists here.</string>
    <string name="greater_than"><![CDATA[>]]></string>
    <string name="grid">Grid</string>
    <string name="licenses">Licenses</string>
    <string name="list">List</string>
    <string name="loading_source">loading</string>
    <string name="logout">Logout</string>
    <string name="menu_item_copy">Copy</string>
    <string name="menu_item_cut">Cut</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_multi_select">Multi Select</string>
    <string name="menu_item_new_folder">New Folder</string>
    <string name="menu_item_paste">Paste</string>
    <string name="menu_item_properties">Properties</string>
    <string name="menu_item_rename">Rename</string>
    <string name="menu_item_zip">Zip to here</string>
    <string name="menu_storage_usage">Storage Usage</string>
    <string name="modifiedTime">Time</string>
    <string name="moving">Moving..</string>
    <string name="moving_count">Moving %d of %d</string>
    <string name="moving_items">moving item(s)</string>
    <string name="name">Name</string>
    <string name="new_folder_name">New folder name</string>
    <string name="no">No</string>
    <string name="no_connected_sources">No sources are currently connected.</string>
    <string name="no_results">No search results.</string>
    <string name="ok">OK</string>
    <string name="open_now">Would you like to open %s now?</string>
    <string name="opening">Opening..</string>
    <string name="opening_file">opening file</string>
    <string name="options">Options</string>
    <string name="order">Order</string>
    <string name="path">Path</string>
    <string name="problem_encountered">Problem encountered</string>
    <string name="properties">Properties</string>
    <string name="rename">Rename</string>
    <string name="renaming_item">renaming item</string>
    <string name="sdcard">SD Card</string>
    <string name="search">Search</string>
    <string name="search_hint">Search files and folders</string>
    <string name="search_results">Search Results</string>
    <string name="selected_item_count">%d selected</string>
    <string name="selected_title">%d selected</string>
    <string name="show_folders_first">Show folders first</string>
    <string name="show_hidden_files">Show hidden files</string>
    <string name="size">Size</string>
    <string name="size_display">%.2f MB</string>
    <string name="sort_by">Sort by</string>
    <string name="sourceName">Source</string>
    <string name="storage_permission">Please enable storage permissions to view local files.</string>
    <string name="type">Type</string>
    <string name="usb">USB</string>
    <string name="warning">Warning</string>
    <string name="yes">Yes</string>
    <string name="zero">0</string>
    <string name="creating_zip">Creating zip…</string>
    <string name="zipping_files">zipping files</string>
    <string name="source">Source</string>
    <string name="action_remove_ads">Remove Ads</string>
    <string name="operation_in_progress">Operation in progress...</string>
</resources>
