<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp">


    <ImageView
        android:id="@+id/img_file_preview"
        android:layout_width="@dimen/thumb_size"
        android:layout_height="@dimen/thumb_size"
        android:layout_centerHorizontal="true"
        android:padding="2dp" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingStart="0dp"
        android:paddingEnd="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txt_item_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/img_file_preview"
        android:layout_marginTop="3dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:textColor="@android:color/black"
        android:textSize="18sp" />
</RelativeLayout>